--- a/index.html
+++ b/index.html
@@ -44,5 +44,6 @@
     </div>
     <script src="jquery.js"></script>
     <script src="index.js"></script>
+    <script src="Mobile_index.js"></script>
 </body>
 </html>
